--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/Andre07g/IGNASIO-JEAN/issues"
   },
-  "homepage": "https://github.com/Andre07g/IGNASIO-JEAN#readme"
+  "homepage": "https://github.com/Andre07g/IGNASIO-JEAN#readme",
+  "dependencies": {
+    "chalk": "^5.6.2",
+    "dotenv": "^17.2.2",
+    "inquirer": "^12.9.6",
+    "mongodb": "^6.20.0",
+    "table": "^6.9.0"
+  }
 }
