--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Andre07g/IGNASIO-JEAN#readme",
   "dependencies": {
     "chalk": "^5.6.2",
+    "cli-table3": "^0.6.5",
     "dotenv": "^17.2.2",
     "inquirer": "^12.9.6",
     "mongodb": "^6.20.0",
